common-applications/test-environment/mindspore-xihe-docs/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: mindspore-xihe-docs
  name: mindspore-xihe-docs
