common-applications/test-environment/mindspore-xihe-docs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mindspore-xihe-docs
  namespace: mindspore-xihe-docs
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: mindspore-xihe-docs
  template:
    metadata:
      labels:
        app: mindspore-xihe-docs
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: mindspore-xihe-docs
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-docs-test:06b4e66bfcaceaaa1e8e00847be4e82c46997719
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
