common-applications/test-environment/mindspore-xihe-docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindspore-xihe-docs-service
  namespace: mindspore-xihe-docs
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: mindspore-xihe-docs
  type: ClusterIP
