common-applications/test-environment/mindspore-xihe-docs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mindspore-xihe-docs-ingress
  namespace: mindspore-xihe-docs
spec:
  tls:
    - hosts:
        - xihe-docs.test.osinfra.cn
      secretName: mindspore-xihe-docs-tls
  rules:
    - host: xihe-docs.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: mindspore-xihe-docs-service
              servicePort: 80
            path: /
